# workflows

./: CHANGELOG.md  Cargo.toml  README.md  a  crates.js  flake.nix  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: auto-merge-pr.example.yml  auto-merge-pr.yml  auto-merge.yml  rust_deploy_binary.yml  rust_dev.example.yml  rust_dev.yml  rust_doc.example.yml  rust_doc.yml  rust_publish.example.yml  rust_publish.yml  rust_release_binary.example.yml  rust_release_binary.yml
main/: all.html  fn.main.html  index.html
not_main/: all.html  fn.main.html  index.html
rraval_workflows/: all.html  constant.NAME.html  index.html
src/: lib.rs  main.rs
src/main/: main.rs.html
src/not_main/: not_main.rs.html
src/rraval_workflows/: lib.rs.html
